# coral-deeplab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: format.yaml  test-compile.yml
compiler/: compiler.sh
coral_deeplab/: __init__.py  _blocks.py  _downloads.py  _encoders.py  _layers.py  applications.py  blocks.py  layers.py  pretrained.py
examples/: example.py
tests/: test_compile.py  test_downloads.py  test_layers.py
